# web-app

./: .gitignore  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-push
apps/backend/: .env.example  README.md  main.py  package.json  pyproject.toml  requirements.txt
apps/backend/app/: __init__.py  config.py
apps/backend/app/api/: __init__.py  router.py
apps/backend/app/api/endpoints/: __init__.py  auth.py  divination.py  health.py  user.py
apps/backend/app/core/: oracle.py
apps/backend/app/models/: __init__.py  auth.py  divination.py  users.py
apps/backend/app/services/: __init__.py
apps/backend/app/services/auth/: __init__.py  dependencies.py  supabase.py
apps/backend/app/services/core/: __init__.py  clarification_prompt.txt  deep_dive_system_prompt.txt  oracle.py  system_prompt.txt
apps/backend/app/services/divination/: __init__.py  iching.py
apps/backend/app/services/users/: __init__.py  quota.py  reading.py
apps/backend/app/utils/: __init__.py
apps/backend/app/utils/clients/: __init__.py  api_client.py
apps/backend/migrations/scripts/: migrate_to_supabase.py
apps/backend/migrations/scripts/preprocessing/: extract_to_json.py  regex_child.py  regex_parent.py
apps/backend/migrations/scripts/scrapers/: run_scraper.py
apps/backend/migrations/sql/: 001_create_user_quotas_table.sql  002_create_handle_new_user_function.sql  003_create_on_auth_user_created_trigger.sql  iching_texts.sql  user_quotas.sql  user_readings.sql
apps/backend/migrations/supabase-sql/: 005_Membership Feature Quota Table.sql  007_User Readings Table.sql  008_I Ching Texts Table Creation.sql
apps/backend/src/: __init__.py  config.py
apps/backend/src/api/: __init__.py  router.py
apps/backend/src/api/endpoints/: __init__.py  auth.py  divination.py  health.py  todos.py
apps/backend/src/auth/: __init__.py  dependencies.py  supabase.py
apps/backend/src/clients/: api_client.py
apps/backend/src/core/: __init__.py  oracle.py
apps/backend/src/divination/: __init__.py  iching.py  quota.py
apps/backend/src/models/: __init__.py  auth.py  divination.py  quota.py  readings.py
apps/backend/supabase/email_templates/: change_email.html  confirm_signup.html
apps/backend/supabase/migrations/scripts/: migrate_to_supabase.py
apps/backend/supabase/migrations/scripts/preprocessing/: regex_child.py
apps/backend/supabase/migrations/scripts/scrapers/: run_scraper.py
apps/backend/supabase/migrations/scripts/scrapers/constants/: coordinate.py  hexagram.py
apps/backend/supabase/migrations/supabase-sql/: 001_Membership Tiers Table Creation.sql  002_Features Table Creation.sql  003_User Profiles Table.sql  004_User Profile Creation Trigger.sql  006_Divinations Log Table.sql  008_I Ching Texts Table Creation.sql  009_Membership Downgrade Function and Scheduler.sql
apps/backend/tests/: README.md  __init__.py  conftest.py
apps/backend/tests/api/: __init__.py  base_test.py  test_api_client.py  test_auth.py  test_divination.py  test_quota.py  test_user.py
apps/frontend/: .env.example  .env.local  .env.local.example  .eslintrc.json  README.md  components.json  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/frontend/(routes)/about/: page.tsx
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/(auth)/: layout.tsx
apps/frontend/app/(auth)/forgot-password/: page.tsx
apps/frontend/app/(auth)/login/: page.tsx
apps/frontend/app/(auth)/reset-password/: page.tsx
apps/frontend/app/(auth)/signup/: page.tsx
apps/frontend/app/(dashboard)/: layout.tsx
apps/frontend/app/(dashboard)/_components/: UserDisplay.tsx
apps/frontend/app/(marketing)/: layout.tsx  page.tsx
apps/frontend/app/about/: page.tsx
apps/frontend/app/dashboard/: layout.tsx  page.tsx
apps/frontend/app/forgot-password/: page.tsx
apps/frontend/app/how-it-works/: page.tsx
apps/frontend/app/login/: page.tsx
apps/frontend/app/payment/: page.tsx
apps/frontend/app/pricing/: page.tsx
apps/frontend/app/privacy/: page.tsx
apps/frontend/app/profile/: page.tsx
apps/frontend/app/readings/: page.tsx
apps/frontend/app/register/: page.tsx
apps/frontend/app/reset-password/: page.tsx
apps/frontend/app/settings/: page.tsx
apps/frontend/app/terms/: page.tsx
apps/frontend/app/test-animation/: page.tsx
apps/frontend/app/try-now/: page.tsx
apps/frontend/components/auth/: AuthFormWrapper.tsx  AuthInput.tsx  auth-form.tsx  auth-layout.tsx  logout-button.tsx  password-form.tsx
apps/frontend/components/divination/: AnimatedHexagram.tsx  Line.tsx  divination-form.tsx
apps/frontend/components/layout/: ContentContainer.tsx  NavigationBar.tsx  PageLayout.tsx  footer.tsx  header.tsx
apps/frontend/components/providers/: QueryProvider.tsx
apps/frontend/components/sections/: features.tsx  hero.tsx  testimonials.tsx
apps/frontend/components/settings/: ChangePasswordForm.tsx
apps/frontend/components/theme/: theme-provider.tsx  theme-toggle.tsx
apps/frontend/components/ui/: avatar.tsx  button.tsx  card.tsx  checkbox.tsx  container.tsx  dialog.tsx  heading.tsx  input.tsx  panel.tsx  scroll-reveal.tsx  suspense-wrapper.tsx  textarea.tsx
apps/frontend/config/: index.ts
apps/frontend/e2e/: README.md  auth.spec.ts
apps/frontend/e2e/utils/: helpers.ts
apps/frontend/hooks/: use-page-state.ts  use-require-auth.ts
apps/frontend/lib/: divinationUtils.ts
apps/frontend/lib/api/: config.ts
apps/frontend/lib/auth/: auth-context.tsx  auth-utils.ts  secure-storage.ts
apps/frontend/lib/server/: authUtils.ts
apps/frontend/lib/utils/: index.ts
apps/frontend/types/: auth.ts  divination.ts  index.ts  user.ts
docker/: backend.Dockerfile  frontend.Dockerfile
supabase/functions/downgrade-expired-memberships/: README.md  index.ts
(+18 files in other folders)
