[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Backend for web-app"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
# Set the maximum line length to match Black
line-length = 88
# Target Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # Pyflakes (unused imports, variables, etc.)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern Python syntax)
]

# Ignore these specific rules globally
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files (they're often re-exports)
"__init__.py" = ["F401"]
"*/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests that interact with external systems"
]